--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
   <header>
     <div class="logo-text">BPX LOGISTICS</div>
-    <div class="logo-sub">Reliable furniture & freight delivery you can count on.</div>
+    <div class="logo-sub">Reliable, Professional, and Fast delivery you can count on.</div>
   </header>
 
   <main>
@@ -84,8 +84,8 @@
       <h2>About Us</h2>
       <div class="card">
         <p>
-          BPX Logistics is a locally owned delivery service focused on safe,
-          on-time transport of furniture, freight, and oversized items.
+          Located in Horry County and Georgetown County. BPX Logistics is a locally owned delivery service focused on safe,
+          effecient, and reliable transportation for you and your customers.
           From store-to-door drops to multi-stop routes, we treat every load
           like it’s our own.
         </p>
@@ -118,9 +118,9 @@
     <section id="contact">
       <h2>Contact</h2>
       <div class="card contact">
-        <span><strong>Phone:</strong> [your number]</span>
-        <span><strong>Email:</strong> [your email]</span>
-        <span><strong>Business Hours:</strong> [ex: Mon–Sat, 8am–6pm]</span>
+        <span><strong>Phone:</strong> (843) 458-4838</span>
+        <span><strong>Email:</strong> bpxlogisticsllc2@gmail.com</span>
+        <span><strong>Business Hours:</strong> [Mon–Sun, 8am–6pm]</span>
         <p>
           Text, call, or email for a free quote. 
           Share pickup/drop-off addresses, item descriptions, and preferred dates.
