--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
   <header>
     <div class="logo-text">BPX LOGISTICS</div>
-    <div class="logo-sub">Reliable, Professional, and Fast delivery you can count on.</div>
+    <div class="logo-sub">Bold, Precise, eXpress deliveries you can count on.</div>
   </header>
 
   <main>
@@ -96,8 +96,8 @@
       <h2>Services</h2>
       <div class="card">
         <ul class="services-list">
-          <li>Furniture store deliveries (couches, bedroom sets, dining tables)</li>
-          <li>Residential moves for single items or small apartments</li>
+          <li>Furniture store deliveries </li>
+          <li>Retail store deliveries </li>
           <li>Last-mile delivery for local businesses</li>
           <li>White-glove inside placement upon request</li>
         </ul>
@@ -108,8 +108,8 @@
       <h2>Service Area</h2>
       <div class="card">
         <p>
-          Based in <strong>[Your City / Region]</strong>. 
-          We currently serve <strong>[list main cities / counties]</strong>.
+          Based in <strong>[Coastal South Carolina]</strong>. 
+          We currently serve <strong>[Horry/Georgetown County]</strong>.
           Need something outside this area? Reach out and we’ll see what we can do.
         </p>
       </div>
