--- a/index.html
+++ b/index.html
@@ -4,90 +4,111 @@
   <meta charset="UTF-8" />
   <title>BPX Logistics</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #0f1115;
-      color: #f4f4f4;
+      color: #ffffff;
     }
-    header {
-      padding: 40px 20px;
-      text-align: center;
-      background: #111417;
+
+    /* FULLSCREEN BACKGROUND IMAGE */
+    .hero {
+      height: 100vh;
+      width: 100%;
+      background-image: url('background.jpg'); /* <- replace if needed */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-shadow: 0 2px 10px rgba(0,0,0,0.8);
     }
-    .logo-text {
-      font-size: 48px;
-      font-weight: 700;
+
+    .hero-title {
+      font-size: 64px;
+      font-weight: 800;
       letter-spacing: 2px;
-      color: #1f3b2b; /* dark green */
+      color: #1f3b2b; /* BPX dark green */
+      background: rgba(0,0,0,0.35);
+      padding: 15px 25px;
+      border-radius: 8px;
     }
-    .logo-sub {
-      font-size: 18px;
-      color: #cccccc;
+
+    .hero-sub {
+      font-size: 22px;
+      color: #e5e5e5;
+      margin-top: 12px;
+      background: rgba(0,0,0,0.35);
+      padding: 10px 20px;
+      border-radius: 6px;
     }
+
     main {
       max-width: 900px;
       margin: 0 auto;
-      padding: 30px 20px 60px;
+      padding: 40px 20px 70px;
+      background: #0f1115;
     }
-    section {
-      margin-bottom: 40px;
-    }
+
     h2 {
       border-left: 4px solid #1f3b2b;
       padding-left: 10px;
       margin-bottom: 15px;
+      color: #57ff8f;
     }
+
     .card {
-      img src="background.jpg" alt="BPX Logistics Logo" style="width:200px;"
+      background: #15181d;
       padding: 20px;
       border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.5);
+      color: #e8e8e8;
     }
+
     .services-list li {
       margin-bottom: 8px;
     }
-    .contact {
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
-    }
+
     footer {
       text-align: center;
-      font-size: 13px;
-      padding: 20px 10px 30px;
-      color: #888;
+      font-size: 14px;
+      padding: 20px 10px 35px;
+      color: #cccccc;
+      background: #0f1115;
     }
-    a {
-      color: #57ff8f;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+
     @media (max-width: 600px) {
-      .logo-text {
-        font-size: 36px;
+      .hero-title {
+        font-size: 42px;
+      }
+      .hero-sub {
+        font-size: 16px;
       }
     }
   </style>
 </head>
-<body>
-  <header>
-    <div class="logo-text">BPX LOGISTICS</div>
-    <div class="logo-sub">Bold, Precise, eXpress deliveries you can count on.</div>
-  </header>
 
+<body>
+
+  <!-- BACKGROUND IMAGE HERO SECTION -->
+  <div class="hero">
+    <div class="hero-title">BPX LOGISTICS</div>
+    <div class="hero-sub">White Glove Delivery • Professional • Reliable</div>
+  </div>
+
+  <!-- MAIN CONTENT -->
   <main>
     <section id="about">
       <h2>About Us</h2>
       <div class="card">
         <p>
-          Located in Horry County and Georgetown County. BPX Logistics is a locally owned delivery service focused on safe,
-          effecient, and reliable transportation for you and your customers.
-          From store-to-door drops to multi-stop routes, we treat every load
-          like it’s our own.
+          BPX Logistics is a locally owned delivery company dedicated to providing top-tier,
+          white-glove service for both businesses and residential customers. We specialize in
+          safe, reliable, and efficient delivery of furniture, freight, and oversized items —
+          treating every order with unmatched care and professionalism.
         </p>
       </div>
     </section>
@@ -96,34 +117,24 @@
       <h2>Services</h2>
       <div class="card">
         <ul class="services-list">
-          <li>Furniture store deliveries </li>
-          <li>Retail store deliveries </li>
+          <li>White-glove furniture delivery & setup</li>
+          <li>Retail store deliveries for large/fragile items</li>
+          <li>Residential and commercial moves (small/medium)</li>
           <li>Last-mile delivery for local businesses</li>
-          <li>White-glove inside placement upon request</li>
+          <li>Careful handling for luxury and specialty items</li>
         </ul>
-      </div>
-    </section>
-
-    <section id="areas">
-      <h2>Service Area</h2>
-      <div class="card">
-        <p>
-          Based in <strong>Coastal South Carolina</strong>. 
-          We currently serve <strong>Horry/Georgetown County</strong>.
-          Need something outside this area? Reach out and we’ll see what we can do.
-        </p>
       </div>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <div class="card contact">
-        <span><strong>Phone:</strong> (843) 458-4838</span>
-        <span><strong>Email:</strong> bpxlogisticsllc2@gmail.com</span>
-        <span><strong>Business Hours:</strong> [Mon–Sun, 8am–6pm]</span>
+      <div class="card">
+        <p><strong>Phone:</strong> [Your Phone]</p>
+        <p><strong>Email:</strong> [Your Email]</p>
+        <p><strong>Service Area:</strong> Myrtle Beach & surrounding regions</p>
         <p>
-          Text, call, or email for a free quote. 
-          Share pickup/drop-off addresses, item descriptions, and preferred dates.
+          Text or call for a delivery quote. Include pickup & drop-off addresses,
+          item type, and preferred delivery time.
         </p>
       </div>
     </section>
@@ -136,5 +147,6 @@
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
+
 </body>
 </html>
