--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <p>
           BPX Logistics is a locally owned delivery company dedicated to providing top-tier,
           white-glove service for both businesses and residential customers. We specialize in
-          safe, reliable, and efficient delivery of furniture, freight, and oversized items —
+          safe, reliable, and efficient delivery —
           treating every order with unmatched care and professionalism.
         </p>
       </div>
@@ -129,8 +129,8 @@
     <section id="contact">
       <h2>Contact</h2>
       <div class="card">
-        <p><strong>Phone:</strong> [Your Phone]</p>
-        <p><strong>Email:</strong> [Your Email]</p>
+        <p><strong>Phone:</strong> (843) 458-4838</p>
+        <p><strong>Email:</strong> bpxlogisticsllc2@gmail.com</p>
         <p><strong>Service Area:</strong> Myrtle Beach & surrounding regions</p>
         <p>
           Text or call for a delivery quote. Include pickup & drop-off addresses,
