--- a/index.html
+++ b/index.html
@@ -16,22 +16,23 @@
     .hero {
       height: 100vh;
       width: 100%;
-      background-image: url('background.jpg'); /* <- replace if needed */
+      background-image: url('background.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start; /* moved from center */
       align-items: center;
       text-shadow: 0 2px 10px rgba(0,0,0,0.8);
+      padding-top: 120px; /* pushes the title up */
     }
 
     .hero-title {
       font-size: 64px;
       font-weight: 800;
       letter-spacing: 2px;
-      color: #1f3b2b; /* BPX dark green */
+      color: #1f3b2b;
       background: rgba(0,0,0,0.35);
       padding: 15px 25px;
       border-radius: 8px;
